# OpenKB

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-04-09-concept-dedup-and-update.md  2026-04-09-retrieve-redesign.md
docs/superpowers/specs/: 2026-04-09-concept-dedup-and-update-design.md  2026-04-09-retrieve-redesign.md
tests/: conftest.py  test_add_command.py  test_cli.py  test_compiler.py  test_config.py  test_converter.py  test_images.py  test_indexer.py  test_lint_cli.py  test_linter.py  test_list_status.py  test_query.py
